# developable-curve

./: Cargo.toml  Readme.md
docs/: frenet-sorret-parameterization.md  three-surface-problem.md
ex-spiral/: stdin
examples/: .gitignore
examples/pipe/: stdin
examples/pipe/constant/: stdin
examples/pipe/skew/: stdin
examples/surface/curved/: stdin
examples/surface/curved2/: stdin
examples/surface/flat/: stdin
lib/curves/: .gitignore  Cargo.toml
lib/curves/src/: affine.rs  lib.rs  spiral.rs  spline.rs
lib/export/: Cargo.toml
lib/export/src/: lib.rs  obj.rs  svg.rs
lib/integral/: Cargo.toml
lib/integral/src/: lib.rs  pipe.rs
lib/theory/: Cargo.toml
lib/theory/src/: curves.rs  lib.rs
